--- a/index1.html
+++ b/index1.html
@@ -26,13 +26,15 @@
             
             <div class="card" style="width: 18rem;">
                 <div class=" bg-primary card-body text-white">
-                <h4>asfd </h4>
+                <h4>fds </h4>
                 <h4 class="card-title text-white"><i class="fas fa-glasses"></i> Engeneer</h4>
                 </div>
                 <ul class="list-group list-group-flush">
-                <li class="list-group-item  ID" >ID number: w2</li>
-                <li class="list-group-item email" > Email:   <a href="mailto:"></a></li>
-                <li class="list-group-item">GitHub:  <a href="https://github.com/"></a></li>
+                <li class="list-group-item  ID" >ID number: 3</li>
+                <li class="list-group-item email" > Email:   <a href="mailto:werwe">werwe</a></li>
+                <li class="list-group-item">GitHub:" getGitHub(){
+        return this.github;
+    } "<a href="https://github.com/"sdaadfsdfas</a>github.com/sdaadfsdfas</li>
                 </ul>
             </div>
             
