--- a/index1.html
+++ b/index1.html
@@ -26,15 +26,13 @@
             
             <div class="card" style="width: 18rem;">
                 <div class=" bg-primary card-body text-white">
-                <h4>fds </h4>
+                <h4>ads </h4>
                 <h4 class="card-title text-white"><i class="fas fa-glasses"></i> Engeneer</h4>
                 </div>
                 <ul class="list-group list-group-flush">
-                <li class="list-group-item  ID" >ID number: 3</li>
-                <li class="list-group-item email" > Email:   <a href="mailto:werwe">werwe</a></li>
-                <li class="list-group-item">GitHub:" getGitHub(){
-        return this.github;
-    } "<a href="https://github.com/"sdaadfsdfas</a>github.com/sdaadfsdfas</li>
+                <li class="list-group-item  ID" >ID number: 2</li>
+                <li class="list-group-item email" > Email:   <a href="mailto:asd">asd</a></li>
+                <li class="list-group-item link">GitHub:<a href="https://github.com/ SantiBass"</a>github.com/SantiBass</li>
                 </ul>
             </div>
             
